Absolution 3.2.3 - also remove old junk

--- a/Denizen/style.cfg
+++ b/Denizen/style.cfg
@@ -20,9 +20,9 @@
 
 # General Information about this style
 name = Denizen Theme
-copyright = © mcmonkey.org
-style_version = 1.0
-phpbb_version = 3.1.9
+copyright = © denizenscript.com
+style_version = 1.0.1
+phpbb_version = 3.2.3
 
 # Defining a different template bitfield
 # template_bitfield = lNg=
